# JuliaCLI.jl

./: .travis.yml  Project.toml  README.md
docs/: Manifest.toml  make.jl
docs/src/: index.md
jlcli/: .flake8  .gitignore  jlcli.py  setup.cfg  setup.py  test_jlcli.py  tox.ini
scripts/: serve.jl
src/: JuliaCLI.jl  broker.jl  evalutils.jl  rpcutils.jl  scripts.jl  utils.jl  workers.jl
src/workerinitenv/: Manifest.toml  Project.toml  init.jl
test/: Manifest.toml  Project.toml  cli_test.jl  runtests.jl
