[metadata]
name = jlcli
version = attr: jlcli.__version__
# description = jlcli: THIS DOES WHAT
long_description = file: README.rst
# url = https://github.com/tkf/jlcli
# project_urls =
#     Tracker=https://github.com/tkf/jlcli/issues

author = Takafumi Arakaki
author_email = aka.tkf@gmail.com

# SPDX short identifier:
license = MIT
license_file = LICENSE
# keywords =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers

[options]
py_modules =
    jlcli
# zip_safe = False
# install_requires =
#     numpy

[options.entry_points]
console_scripts =
   jlcli=jlcli:main

[bdist_wheel]
# Built wheel is Python 2/3 compatible:
universal = 1

[tool:isort]
known_first_party = jlcli
default_section = THIRDPARTY

# Black-compatible setting.  See: https://github.com/ambv/black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
